--- a/package.json
+++ b/package.json
@@ -15,22 +15,18 @@
   },
   "license": "Unlicense",
   "devDependencies": {
-    "@ehutch79/vite-eslint": "^0.0.1",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
     "@types/dat.gui": "^0.7.7",
     "@types/lodash.debounce": "^4.0.6",
     "@types/three": "^0.135.0",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.4.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.3.2",
-    "vite": "^2.4.2",
-    "vite-plugin-string": "^1.0.1"
+    "vite": "^2.4.2"
   },
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "dat.gui": "^0.7.7",
     "lodash.debounce": "^4.0.8",
     "normalize.css": "^8.0.1",
