--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "Unlicense",
   "devDependencies": {
+    "@types/uuid": "^8.3.3",
     "@types/dat.gui": "^0.7.7",
     "@types/lodash.debounce": "^4.0.6",
     "@types/react": "^17.0.33",
@@ -34,6 +35,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "three": "^0.135.0"
+    "three": "^0.135.0",
+    "uuid": "^8.3.2"
   }
 }
