--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "license": "Unlicense",
   "devDependencies": {
-    "@types/uuid": "^8.3.3",
     "@types/dat.gui": "^0.7.7",
     "@types/lodash.debounce": "^4.0.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/three": "^0.135.0",
+    "@types/uuid": "^8.3.3",
     "@vitejs/plugin-react": "^1.0.7",
     "sass": "^1.45.0",
     "typescript": "^4.3.2",
@@ -33,6 +33,7 @@
     "dat.gui": "^0.7.7",
     "lodash.debounce": "^4.0.8",
     "normalize.css": "^8.0.1",
+    "popmotion": "^11.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "three": "^0.135.0",
