--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "three": "^0.135.0",
+    "three-csg-ts": "^3.1.9",
     "uuid": "^8.3.2"
   }
 }
