--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@constants": ["src/constants"],
       "@env": ["src/env"],
