--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/dat.gui": "^0.7.7",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.merge": "^4.6.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/three": "^0.135.0",
@@ -32,6 +33,7 @@
     "classnames": "^2.3.1",
     "dat.gui": "^0.7.7",
     "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.2",
     "normalize.css": "^8.0.1",
     "popmotion": "^11.0.3",
     "react": "^17.0.2",
